welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:9: error: not found: value biscuit
  if (biscuit>=3){
      ^