welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
while (!sortieTrouvee){
  do{
  	var biscuit=0
    avance()
    if (estSurBiscuit){
      biscuit=biscuit+1
     }
	} while (!crossing) 
  if (biscuit>=3){
    gauche()
  } else {
    droite()
  }
}
